Implement club creation + auto leader/vice accounts + various improvements]